--- a/src/components/home/home.styles.css
+++ b/src/components/home/home.styles.css
@@ -18,7 +18,7 @@
   border-radius: 15px;
   box-shadow: 5px 5px 5px black;
 
-  background-color: rgba(60, 59, 63, 0.725);
+  background-color: var(--first-main-color);
 }
 
 .home-link-item {
