--- a/src/components/user/user.styles.css
+++ b/src/components/user/user.styles.css
@@ -34,4 +34,14 @@
   color: black;
   font-size: 20px;
   font-weight: 500;
+
+  transition: 0.3s;
+}
+
+.user-container:last-child {
+  margin: 0;
+}
+
+.user-container:hover {
+  transform: scale(1.02);
 }
