imporved fetching, added error handling, few css tweaks

--- a/src/components/userItem/userItem.styles.css
+++ b/src/components/userItem/userItem.styles.css
@@ -3,6 +3,11 @@
   padding: var(--elements-padding);
 }
 
+.userItem-home-button::after {
+  height: 5px;
+  overflow: hidden;
+}
+
 .userItem-text {
   margin: 70px;
   padding: 100px;
